Remove fixed height and z-index on quote

--- a/styles.css
+++ b/styles.css
@@ -192,14 +192,12 @@ input {
 .organic-pull-quote {
   position: relative;
   width: 100%;
-  height: 25vh;
   padding: 40px;
   background-color: #f9fbf9;
   border-left: 5px solid #4a7c44;
   font-style: italic;
   text-align: center;
   margin: 0;
-  z-index: -1;
 }
 
 .organic-pull-quote p {
